# Engram

./: README.md  ROADMAP.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  index.html  openapi.yaml
engram-core/: Cargo.toml
engram-core/src/: lib.rs  proof.rs
engram/relay/: __init__.py  adapter.py  client.py  signer.py
engram/validator/: reputation.py  reward.py
neurons/: miner.py  validator.py
scripts/bench/: benchmark.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  crypto.ts  errors.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts
tests/: test_memory_proofs.py  test_relay.py  test_reputation.py
