[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-subnet"
version = "0.1.2"
description = "Decentralized IPFS-style vector database on Bittensor — the permanent semantic memory layer for AI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Engram Contributors" }]
keywords = ["bittensor", "vector-database", "embeddings", "decentralized", "RAG", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
]

# SDK-only deps — lightweight, no PyTorch, no Bittensor
# `pip install engram-subnet` gives you EngramClient only
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Full miner + validator runtime (pulls bittensor, faiss, sentence-transformers)
node = [
    "bittensor>=7.4.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

# Slim miner runtime for Docker — no sentence-transformers/PyTorch (uses OpenAI embeddings)
miner = [
    "bittensor>=7.4.0",
    "faiss-cpu>=1.8.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

# Production vector store
qdrant = ["qdrant-client>=1.9.0"]

# OpenAI embeddings
openai = ["openai>=1.30.0"]

# Local sentence-transformers embedder for SDK private namespace encryption
local-embedder = ["sentence-transformers>=3.0.0"]

# Arweave permanent storage upload
arweave = ["arweave-python-client>=2.0.0"]

# PDF ingestion via ingest_document()
pdf = ["pypdf>=4.0.0"]

# All media/ingestion extras bundled
media = [
    "engram-subnet[arweave,pdf]",
]

# CLI (engram ingest / query / status / init)
cli = [
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

# Full dev toolchain
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "maturin>=1.5.0",
]

# Everything — miners, validators, SDK, CLI
all = [
    "engram-subnet[node,qdrant,openai,local-embedder,media,cli,dev]",
]

[project.urls]
Homepage = "https://github.com/Dipraise1/-Engram-"
Repository = "https://github.com/Dipraise1/-Engram-"
"Bug Tracker" = "https://github.com/Dipraise1/-Engram-/issues"

[project.scripts]
engram = "engram.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["engram*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# miner.py must call load_dotenv() before other imports so config.py reads the
# correct EMBEDDING_DIM and other env vars at module-import time.
"neurons/miner.py" = ["E402"]
"neurons/validator.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
