[package]
name = "engram-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for Engram subnet — CID generation and storage proofs via PyO3"

[lib]
name = "engram_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3